fix some bugs in source and config file

--- a/membrane.cfg
+++ b/membrane.cfg
@@ -5,4 +5,4 @@ theta = 0.2
 x0 = 0.6*R*cos(theta)
 y0 = 0.6*R*sin(theta)
 sigma = 0.025
-f=4*exp(-0.5*(pow((R*-x0)/sigma,2)) - 0.5*(pow((R*y-y0)/sigma,2))):x:y:T:sigma:x0:y0
+f=4*exp(-0.5*(pow((R*x-x0)/sigma,2)) - 4*(pow((R*y-y0)/sigma,2))):x:y:R:T:sigma:x0:y0
